trying to fix for wrap

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Lato", sans-serif;
+  display: grid;
 }
 
 h2 {
@@ -22,8 +23,8 @@ p {
 }
 
 section {
-  padding: 20px;
-}
+  padding: 5%;
+ }
 
 section.alternate-background {
   background-color: #00a699;
@@ -32,6 +33,14 @@ section.alternate-background {
 
 main img {
   width: 100px;
+}
+.about-img {
+  width: 100%;
+  padding:5px 0 5px 0;
+}
+.host-img {
+  width: 100%;
+  padding:5px 0 5px 0;
 }
 
 /* ---  Groups & Items --- */
@@ -44,24 +53,34 @@ main img {
 .item {
   flex: 1;
   margin: 10px;
+  
 }
 
 .item-double {
   flex: 2;
+  margin: 2%;
 }
 
 /* -------  Navigation ------- */
 
 header {
   background-color: #ff385c;
-  padding: 20px 20px 0 20px;
+  padding: 7% 5% 0 5%;
   text-align: center;
 }
 
 .logo {
+  display: flex;
+  justify-content: center;
   font-family: "Pangolin", cursive;
   font-size: 72px;
   color: #fff;
+}
+header nav ul {
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  padding: 0 0 4% 0;
 }
 
 header nav ul li {
@@ -81,18 +100,24 @@ header nav ul li a:hover {
 
 /* -------  Search Form ------- */
 form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   border: 2px solid #ff385c;
-  padding: 10px;
+  padding: 0 2% 0 0;
+  
 }
 
 form label {
   font-weight: bold;
+  padding: 0 5% 0 0;
 }
 
-form select,
-form input {
-  margin-bottom: 20px;
-  width: 180px;
+
+.item .form-input {
+ display: flex;
+ justify-content: space-between;
+ 
 }
 
 form button {
